--- a/index.html
+++ b/index.html
@@ -279,7 +279,7 @@
         autoload: 0
       },
       container: '#gjs',
-      components: empty,
+      components: template,
       //importPlaceholder: empty,
       //categoryLabel: "testing",
       //modalTitleImport: "testing",
