move templates to file and fix clear button

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <link href="https://unpkg.com/grapesjs/dist/css/grapes.min.css" rel="stylesheet">
   <script src="https://unpkg.com/grapesjs"></script>
   <script src="dist/grapesjs-mjml.min.js"></script>
+  <script src="src/templates.js"></script>
   <style>
     body,
     html {
@@ -156,117 +157,13 @@
 
 
   <script type="text/javascript">
-    var template = `<mjml>
-        <mj-head>
-          <!--Optional title element-->
-          <mj-title></mj-title>
-          <!--Fix for iphone 10-->
-          <mj-raw>
-            <meta name="x-apple-disable-message-reformatting">
-          </mj-raw>
-          <!--Set a custom breakpoint for the mobile size-->
-          <mj-breakpoint width="480px"></mj-breakpoint>
-          <!--Optional hidden preview text-->
-          <mj-preview></mj-preview>
-          <mj-font name="Roboto" href="https://fonts.googleapis.com/css?family=Roboto"></mj-font>
-          <mj-attributes>
-            <!--Any default attribute can be overwritten here-->
-            <mj-all font-family="Roboto, Helvetica, Arial, sans-serif" align="center" color="#333333" font-size="18px" line-height="140%"></mj-all>
-          </mj-attributes>
-          <!--Fix so that alt text shows for images-->
-          <mj-style inline="inline">
-            img {
-            color: #000000;
-            font-size: 14px;
-            line-height: 1;
-            text-align: center;
-            }
-          </mj-style>
-        </mj-head>
-        <mj-body background-color="#eeeeee">
-          <mj-section>
-            <mj-column>
-              <mj-image alt="" src="https://via.placeholder.com/200x50?text=LOGO" width="200px" href="{{LINK1}}" padding="0" />
-            </mj-column>
-          </mj-section>
-
-          <mj-section padding="0">
-            <mj-column>
-              <mj-image alt="" src="https://via.placeholder.com/600x300?text=HERO" href="{{LINK1}}" padding="0" />
-            </mj-column>
-          </mj-section>
-
-          <mj-section background-color="#fff">
-            <mj-column>
-              <mj-text align="left">
-                <p>EXAMPLE_TEXT</p>
-                <p>Sincerely<br />
-                  <b>COMPANY</b></p>
-              </mj-text>
-            </mj-column>
-          </mj-section>
-
-          <mj-social font-size="12px" icon-size="24px" border-radius="12px" mode="horizontal">
-            <mj-social-element name="facebook-noshare"></mj-social-element>
-            <mj-social-element name="instagram-noshare"></mj-social-element>
-            <mj-social-element name="twitter-noshare"></mj-social-element>
-            <mj-social-element name="youtube-noshare"></mj-social-element>
-            <mj-social-element name="pinterest-noshare"></mj-social-element>
-          </mj-social>
-
-          <mj-section background-color="#eeeeee" padding="0">
-            <mj-column>
-              <mj-text font-size="12px" align="center">
-                <p>&copy; {{date_now:yyyy}} COMPANY | ADDRESS<br />
-                  <a href="https://www.upsellit.com/hound/nomore.jsp?{{SESSIONID}}" style="color:#333">Unsubscribe</a>
-                </p>
-              </mj-text>
-            </mj-column>
-          </mj-section>
-
-        </mj-body>
-      </mjml>`;
-    var empty = `<mjml>
-        <mj-head>
-          <!--Optional title element-->
-          <mj-title></mj-title>
-          <!--Fix for iphone 10-->
-          <mj-raw>
-            <meta name="x-apple-disable-message-reformatting">
-          </mj-raw>
-          <!--Set a custom breakpoint for the mobile size-->
-          <mj-breakpoint width="480px" />
-          <!--Optional hidden preview text-->
-          <mj-preview></mj-preview>
-          <mj-font name="Roboto" href="https://fonts.googleapis.com/css?family=Roboto" />
-          <mj-attributes>
-            <!--Any default attribute can be overwritten here-->
-            <mj-text align="center" color="#333333" font-size="18px" line-height="140%" />
-            <mj-body background-color="#eeeeee" />
-            <mj-section background-color="#ffffff" />
-            <mj-all font-family="Roboto, Helvetica, Arial, sans-serif" />
-          </mj-attributes>
-          <!--Fix so that alt text shows for images-->
-          <mj-style inline="inline">
-            img {
-            color: #000000;
-            font-size: 14px;
-            line-height: 1;
-            text-align: center;
-            }
-          </mj-style>
-        </mj-head>
-        <mj-body>
-        </mj-body>
-      </mjml>`;
-
     var editor = grapesjs.init({
       height: '100%',
       storageManager: {
         autoload: 0
       },
       container: '#gjs',
-      components: template,
+      components: templates.default,
       //importPlaceholder: empty,
       //categoryLabel: "testing",
       //modalTitleImport: "testing",
